# finite-state-machine

./: LICENSE  README.md  pyproject.toml  setup.cfg
examples/: README.md  example1.py
fsm_finite_state_machine/: __init__.py  fsm.py
