# Configuration details of the python package.

[metadata]
name = fsm
version = attr: fsm.__version__
description = Finite State Machine
license = MIT
author = André Rodrigues Almeida
long_description = file: README.md
keywords = fsm, setuptools
classifiers =
   Programming Language :: Python :: 3

[options]
packages = find:
install_requires =

[options.entry_points]
console_scripts = 
    example1 = examples.example1:main

[aliases]
test=pytest