# Configuration details of the python package.

[metadata]
name = fsm_finite_state_machine
version = attr: fsm_finite_state_machine.__version__
description = Finite State Machine
license = MIT
author = André Rodrigues Almeida
long_description_content_type='text/markdown'
long_description = file: README.md
keywords = fsm_finite_state_machine, setuptools
classifiers =
   Programming Language :: Python :: 3

[options]
packages = find:
install_requires =

[options.entry_points]
console_scripts = 
    example1 = examples.example1:main

[aliases]
test=pytest